[tool.poetry]
name = "mec_rl"
version = "0.1.0"
description = "RL and MARL for Mobile Edge Computing Load Optimization"
authors = ["Avinash Ranganath <nash911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pettingzoo = "^1.22.3"
#torch = ">=2.0"
matplotlib = "^3.6.0"
numpy = "^1.24"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
